2005-04-01  Petr Ovtchenkov  <ptr@island...>

	* test/unit/test_errno.cpp: fix test, errno may be non-zero without
	any error, but it reflect error code after some function fail.
	This not the same.

	* test/unit/mfunptr_test.cpp: add step-by-step test how compiler
	recognize bind of member function for find_if. Not all compilers may
	understand this. Thanks Markus for test idea.

2005-03-31  Francois Dumont  <dums@stlport...>

	* stlport/errno.h: Fixed for MSVC compilers, should still be fine for
	others.
	
	* test/unit/test_errno.cpp: Modified to be a real unit test. Also test
	errno assignment.
	
2005-03-30  Francois Dumont  <dums@stlport...>

	* stlport/stl/_fstream.c: Try to fix ambiguous type deduction in a max
	call under WinCE.
	
	* stlport/stl/_cmath.h: Fix missing non Standard hypot function under
	WinCE thanks Micheal Fink.
	
	* stlport/stl/_cmath.h: Attempt to fix the WinCE math function support
	where neither *f nor *l functions are present even if the compiler
	support the long double type.
	
2005-03-30  Petr Ovtchenkov  <ptr@island...>

	* stlport/assert.h, float.h, iso646.h, limits.h, errno.h:
	added in accordance with Standard D.5 [compatibility with standard
	C library] to prevent wrong std interpretation in ill-formed native
	headers [definition of namespace std in C headers].

	* test/unit/test_errno.cpp: check correct processing of errno.h
	header.

	* build/test/eh: build eh tests again.

	* test/eh/LeakCheck.h, TestClass.cpp, TestClass.h: fix and clear.

	* test/eh/test_hash_map.cpp, test_hash_set.cpp: mutiset/multimap
	has no == operator [no container equality]; this fix is quick-and-dirty

2005-03-29  Petr Ovtchenkov  <ptr@island...>

	* build/Makefiles/gmake/app/rules.mak, freebsd/rules-so.mak,
	linux/rules-so.mak, openbsd/rules-so.mak, sunos/rules-so.mak:
	fix link sequence---the end objects should be really last, i.e. after libs.
	This affected by linkage without libstdc++.
