@@ -24,12 +24,25 @@ __stlp_string_fill(basic_ostream<_CharT, _Traits>& __os,
   return true;
 }
 
+
+inline void __avoid_unused_var_warning(char[1 == 1]) {}
+
 template <class _CharT, class _Traits, class _Alloc>
 basic_ostream<_CharT, _Traits>& _STLP_CALL
-operator<<(basic_ostream<_CharT, _Traits>& __os, 
-           const basic_string<_CharT,_Traits,_Alloc>& __s) {
+operator << (basic_ostream<_CharT, _Traits>& __os, 
+             const basic_string<_CharT,_Traits,_Alloc>& __s) {
   typedef basic_ostream<_CharT, _Traits> __ostream;
-  typedef typename basic_string<_CharT, _Traits>::size_type size_type;
+  typedef typename basic_string<_CharT, _Traits, _Alloc>::size_type size_type;
+
+  /* The hypothesis of this implementation is that size_type is unsigned
+   * and streamsize is at least equal to size_type.
+   * It is important in the way we compare it to streamsize.
+   */
+  char __static_assert_unsigned_size_type[__STATIC_CAST(size_type, -1) > 0];
+  __avoid_unused_var_warning(__static_assert_unsigned_size_type);
+  char __static_assert_gt_or_eq_size[sizeof(streamsize) >= sizeof(size_type)];
+  __avoid_unused_var_warning(__static_assert_gt_or_eq_size);
+
   typename __ostream::sentry __sentry(__os);
   bool __ok = false;
 
@@ -41,7 +54,10 @@ operator<<(basic_ostream<_CharT, _Traits>& __os,
     const streamsize __w = __os.width(0);
     basic_streambuf<_CharT, _Traits>* __buf = __os.rdbuf();
 
-    if (__n < __w) {
+    /* If __n cast in streamsize is negative the string is already longer
+     * than the possible output stream width requested so no need to pad.
+     */
+    if ((__STATIC_CAST(streamsize, __n) >= 0) && (__w > __STATIC_CAST(streamsize, __n))) {
       __pad_len = __w - __n;
     }
     
@@ -59,13 +75,23 @@ operator<<(basic_ostream<_CharT, _Traits>& __os,
 
   return __os;
 }
- 
+
 template <class _CharT, class _Traits, class _Alloc>
 basic_istream<_CharT, _Traits>& _STLP_CALL 
-operator>>(basic_istream<_CharT, _Traits>& __is,
-           basic_string<_CharT,_Traits, _Alloc>& __s) {
+operator >> (basic_istream<_CharT, _Traits>& __is,
+             basic_string<_CharT,_Traits, _Alloc>& __s) {
   typedef basic_istream<_CharT, _Traits> __istream;
-  typedef typename basic_string<_CharT, _Traits>::size_type size_type;
+  typedef typename basic_string<_CharT, _Traits, _Alloc>::size_type size_type;
+
+  /* The hypothesis of this implementation is that size_type is unsigned
+   * and streamsize is at least equal to size_type.
+   * It is important in the way we compare it to streamsize.
+   */
+  char __static_assert_unsigned_size_type[__STATIC_CAST(size_type, -1) > 0];
+  __avoid_unused_var_warning(__static_assert_unsigned_size_type);
+  char __static_assert_gt_or_eq_size[sizeof(streamsize) >= sizeof(size_type)];
+  __avoid_unused_var_warning(__static_assert_gt_or_eq_size);
+
   typename __istream::sentry __sentry(__is);
 
   if (__sentry) {
@@ -79,7 +105,12 @@ operator>>(basic_istream<_CharT, _Traits>& __is,
     size_type __n;
     if (__width <= 0)
       __n = __s.max_size();
-    else if (__width > __s.max_size())
+    /* If string max_size() cast to streamsize is negative it means that
+     * the required extraction size will never exceed the possible string
+     * representation.
+     */
+    else if ((__STATIC_CAST(streamsize, __s.max_size()) >= 0) && 
+             (__width > __STATIC_CAST(streamsize, __s.max_size())))
       __n = 0;
     else {
       __n = __STATIC_CAST(size_type, __width);
@@ -121,7 +152,7 @@ getline(basic_istream<_CharT, _Traits>& __is,
         basic_string<_CharT,_Traits,_Alloc>& __s,
         _CharT __delim) {
   typedef basic_istream<_CharT, _Traits> __istream;
-  typedef typename basic_string<_CharT, _Traits>::size_type size_type;
+  typedef typename basic_string<_CharT, _Traits, _Alloc>::size_type size_type;
   size_type __nread = 0;
   typename basic_istream<_CharT, _Traits>::sentry __sentry(__is, true);
   if (__sentry) {
